objects/Rate_Card_Fee__c.object
<CustomObject>
    <description>This is an object to handle the creation of fee schedules, dependent on the Rate Card object</description>
    <fields>
        <fullName>Fee_Charged__c</fullName>
        <description>Rate for associated price range</description>
        <label>Fee Charged</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Min__c</fullName>
        <description>Minimum price range for fee</description>
        <label>Price Min</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Card__c</fullName>
        <label>Rate Card</label>
        <referenceTo>Rate_Card__c</referenceTo>
        <relationshipLabel>Rate Card Fees</relationshipLabel>
        <relationshipName>Rate_Card_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rate Card Fee</label>
    <nameField>
        <displayFormat>RCF-{00000}</displayFormat>
        <label>Rate Card Fee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Card Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>